fixed some undocumented a11y contrast issues for contacts

--- a/ui/apps/io.ox/contacts/style.less
+++ b/ui/apps/io.ox/contacts/style.less
@@ -76,7 +76,7 @@
         }
 
         &.thumb-index-disabled, &.thumb-index-disabled:hover {
-            color: #ccc;
+            color: #949494;
             font-weight: normal;
             cursor: default;
 
@@ -205,7 +205,7 @@
             dt {
                 width: 192px;
                 text-align: left;
-                color: #aaa;
+                color: #767676;
                 font-weight: 300;
 
                 html.high-contrast & { color: @hc-gray; }
